Fixes overlapping sections in header

--- a/src/index.css
+++ b/src/index.css
@@ -647,6 +647,7 @@ button.fa-button {
   font-family: system-ui, sans-serif;
   font-size: 1rem;
   line-height: 1.2;
+  overflow: hidden;
   white-space: nowrap;
   cursor: pointer;
 }
